[package]
name = "iroh-retro"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-timers = "0.4.0"
hex = "0.4.3"
iroh = "1.0.0"
js-sys = "0.3.102"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = { version = "0.8.13" }
n0-future = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.102", features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "Blob", "BlobPropertyBag", "Clipboard", "Document", "GainNode", "HtmlAnchorElement", "Navigator", "OscillatorNode", "OscillatorType", "Storage", "Url", "Window"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
incremental = false
